# avogadro-rdkit

./: LICENSE  README.md  assign-stereo.py  canon-conf.py  etkdg.py  mmff94.py  plugin.json  pyproject.toml  requirements.txt  select-smarts.py  standardize.py  tautomer.py  uff.py
customization/: etkdg_options.json  smarts_options.json
src/avogadro_rdkit/: __init__.py  conformers.py  run.py  selection.py  transforms.py
